--- a/index.html
+++ b/index.html
@@ -4,6 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="scripts.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="calcContainer">
+        <div>
+          <div class="outputContainer">
+            <div class="output">0</div>
+          </div>
+          <div class="buttonContainer">
+            <div class="numbers">
+              <div class="row">
+                <button class="button">7</button>
+                <button class="button">8</button>
+                <button class="button">9</button>
+                <button class="button">÷</button>
+              </div>
+              <div class="row">
+                <button class="button">4</button>
+                <button class="button">5</button>
+                <button class="button">6</button>
+                <button class="button">x</button>
+              </div>
+              <div class="row">
+                <button class="button">1</button>
+                <button class="button">2</button>
+                <button class="button">3</button>
+                <button class="button">+</button>
+              </div>
+              <div class="row">
+                <button class="button">0</button>
+                <button class="button">.</button>
+                <button class="button">=</button>
+                <button class="button">-</button>
+              </div>
+            </div>
+            <!-- <div class="operatorContainer">
+              <button class="operators">÷</button>
+              <button class="operators">x</button>
+              <button class="operators">+</button>
+              <button class="operators">-</button>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
