Added clear button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <div class="outputContainer">
             <div class="output">0</div>
           </div>
+          <div class="clearContainer">
+            <button class="clearButton">Clear</button>
+          </div>
           <div class="buttonContainer">
             <div class="numbers">
               <div class="row">
