--- a/index.html
+++ b/index.html
@@ -5,51 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
   </head>
   <body>
     <div class="container">
       <div class="calcContainer">
         <div>
           <div class="outputContainer">
-            <div class="output">0</div>
+            <div class="output" id="outputDisplay">0</div>
           </div>
           <div class="clearContainer">
-            <button class="clearButton">Clear</button>
+            <button class="clearButton" id="clear">Clear</button>
           </div>
           <div class="buttonContainer">
             <div class="numbers">
               <div class="row">
-                <button class="button">7</button>
-                <button class="button">8</button>
-                <button class="button">9</button>
-                <button class="button">÷</button>
+                <button class="button" id="button7" value="7">7</button>
+                <button class="button" id="button8" value="8">8</button>
+                <button class="button" id="button9" value="9">9</button>
+                <button class="button" id="division">÷</button>
               </div>
               <div class="row">
-                <button class="button">4</button>
-                <button class="button">5</button>
-                <button class="button">6</button>
-                <button class="button">x</button>
+                <button class="button" id="button4" value="4">4</button>
+                <button class="button" id="button5" value="5">5</button>
+                <button class="button" id="button6" value="6">6</button>
+                <button class="button" id="product">x</button>
               </div>
               <div class="row">
-                <button class="button">1</button>
-                <button class="button">2</button>
-                <button class="button">3</button>
-                <button class="button">+</button>
+                <button class="button" id="button1" value="1">1</button>
+                <button class="button" id="button2" value="2">2</button>
+                <button class="button" id="button3" value="3">3</button>
+                <button class="button" id="add">+</button>
               </div>
               <div class="row">
-                <button class="button">0</button>
-                <button class="button">.</button>
-                <button class="button">=</button>
-                <button class="button">-</button>
+                <button class="button" id="button0" value="0">0</button>
+                <button class="button" id="decimal">.</button>
+                <button class="button" id="equal">=</button>
+                <button class="button" id="sub">-</button>
               </div>
             </div>
-            <!-- <div class="operatorContainer">
-              <button class="operators">÷</button>
-              <button class="operators">x</button>
-              <button class="operators">+</button>
-              <button class="operators">-</button>
-            </div> -->
           </div>
         </div>
       </div>
