Numbers update on the display. Added backspace button.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
           <div class="outputContainer">
             <div class="output" id="outputDisplay">0</div>
           </div>
-          <div class="clearContainer">
-            <button class="clearButton" id="clear">Clear</button>
+          <div class="backspace-clear">
+            <div class="clearContainer">
+              <button class="clearButton" id="backspace"><-</button>
+            </div>
+            <div class="clearContainer">
+              <button class="clearButton" id="clear">Clear</button>
+            </div>
           </div>
           <div class="buttonContainer">
             <div class="numbers">
