--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div>
               <div class="row">
                 <button class="button" id="button0" value="0">0</button>
-                <button class="button" id="decimal">.</button>
+                <button class="button" id="decimal" value=".">.</button>
                 <button class="button" id="equal">=</button>
                 <button class="button" id="sub">-</button>
               </div>
