--- a/index.html
+++ b/index.html
@@ -28,25 +28,31 @@
                 <button class="button" id="button7" value="7">7</button>
                 <button class="button" id="button8" value="8">8</button>
                 <button class="button" id="button9" value="9">9</button>
-                <button class="button" id="division">÷</button>
+                <button class="button" id="division" value="÷">÷</button>
+                <!-- <button class="opButton" id="division">÷</button> -->
               </div>
               <div class="row">
                 <button class="button" id="button4" value="4">4</button>
                 <button class="button" id="button5" value="5">5</button>
                 <button class="button" id="button6" value="6">6</button>
-                <button class="button" id="product">x</button>
+                <button class="button" id="product" value="x">x</button>
+                <!-- <button class="opButton" id="product">x</button> -->
               </div>
               <div class="row">
                 <button class="button" id="button1" value="1">1</button>
                 <button class="button" id="button2" value="2">2</button>
                 <button class="button" id="button3" value="3">3</button>
-                <button class="button" id="add">+</button>
+                <button class="button" id="add" value="+">+</button>
+                <!-- <button class="opButton" id="add">+</button> -->
               </div>
               <div class="row">
                 <button class="button" id="button0" value="0">0</button>
                 <button class="button" id="decimal" value=".">.</button>
-                <button class="button" id="equal">=</button>
-                <button class="button" id="sub">-</button>
+                <button class="button" id="equal" value="=">=</button>
+                <button class="button" id="sub" value="-">-</button>
+                <!-- <button class="opButton" id="decimal" value=".">.</button>
+                <button class="opButton" id="equal">=</button>
+                <button class="opButton" id="sub">-</button> -->
               </div>
             </div>
           </div>
