Fixed decimal place to show up correctly on second number

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="calcContainer">
         <div>
           <div class="outputContainer">
+            <div id="equationOutput">&nbsp;</div>
             <div class="output" id="outputDisplay">0</div>
           </div>
           <div class="backspace-clear">
@@ -44,7 +45,7 @@
               </div>
               <div class="row">
                 <button class="button" id="button0" value="0">0</button>
-                <button class="opButton" id="decimal" value=".">.</button>
+                <button class="decimalButton" id="decimal" value=".">.</button>
                 <button class="opButton" id="equal" value="=">=</button>
                 <button class="opButton" id="sub" value="-">-</button>
               </div>
