--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
   </head>
@@ -57,5 +61,9 @@
       <!-- calContainer Div -->
     </div>
     <!-- Container Div -->
+    <div class="footer">
+      Made by Ryan Chan
+      <a href="https://github.com/TwelveStacks"><i class="fa fa-github"></i></a>
+    </div>
   </body>
 </html>
